--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
@@ -44,5 +45,10 @@
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
