--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@master
     - run: yarn
     - run: yarn build
-    - run: tar -zcvf release.tgz .nuxt static nuxt.config.ts package.json yarn.lock pm2.config.json
+    - run: tar -zcvf release.tgz .nuxt static nuxt.config.ts tsconfig.json package.json yarn.lock pm2.config.json
 
     # 发布 Release
     - name: Create Release
@@ -55,8 +55,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /root/realworld-nuxtjs
+          cd /home/ubuntu/realworld
           wget https://github.com/yipf42/nuxt-ts-demo/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
-          npm install --production
+          yarn install --production
           pm2 reload pm2.config.json
